fixing sticky overflow: y

--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,16 @@
  }
 
 html, body {
+    max-width: 100%;
     background-color: #040404;
     font-family: "Montserrat", sans-serif;
+    scroll-behavior: smooth;
+}
+
+.container-x {
     max-width: 100%;
     overflow-x: hidden;
-    overflow-y: auto;
-    scroll-behavior: smooth;
+    overflow-y: auto !important;
 }
 
 h1 {
@@ -46,6 +50,7 @@ p {
     height: 650px;   
     padding: 5%;
     position: relative;
+    background-color: #040404;
 }
 
 #services h1 {
@@ -80,6 +85,7 @@ p {
     width: 100%;
     height: 300px;
     position: relative;
+    background-color: #040404;
 }
 
 #footer {
@@ -92,6 +98,7 @@ p {
 #copyright {
     width: 100%;
     height: 50px;
+    background-color: #040404;
 }
 
 /* nav css  */
